parser.output
Estado 66 conflictos: 8 desplazamiento/reducción
Estado 68 conflictos: 1 desplazamiento/reducción
Estado 109 conflictos: 6 reducción/reducción
Estado 114 conflictos: 6 reducción/reducción
Estado 163 conflictos: 6 desplazamiento/reducción
Estado 164 conflictos: 6 desplazamiento/reducción
Estado 165 conflictos: 6 reducción/reducción
Estado 166 conflictos: 6 reducción/reducción
Estado 167 conflictos: 6 reducción/reducción
Estado 168 conflictos: 6 reducción/reducción
Estado 169 conflictos: 6 reducción/reducción
Estado 170 conflictos: 6 reducción/reducción
Estado 171 conflictos: 6 reducción/reducción
Estado 172 conflictos: 6 reducción/reducción
Estado 174 conflictos: 3 desplazamiento/reducción
Estado 178 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: algoritmo $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 algoritmo: BI_ALGORITMO BI_ID $@1 cabecera_alg $@2 bloque_alg $@3 BI_FALGORITMO

    5 cabecera_alg: decl_globales decl_a_f decl_ent_sal BI_COMENTARIO

    6 bloque_alg: bloque BI_COMENTARIO

    7 decl_globales: declaracion_tipo decl_globales
    8              | declaracion_cte decl_globales
    9              | %empty

   10 decl_a_f: accion_d decl_a_f
   11         | funcion_d decl_a_f
   12         | %empty

   13 bloque: declaraciones instrucciones

   14 declaraciones: declaracion_tipo declaraciones
   15              | declaracion_cte declaraciones
   16              | declaracion_var declaraciones
   17              | %empty

   18 declaracion_tipo: BI_TIPO lista_d_tipo BI_FTIPO

   19 declaracion_cte: BI_CONST lista_de_cte BI_FCONST

   20 declaracion_var: BI_VAR lista_d_var BI_FVAR

   21 lista_d_tipo: BI_ID BI_IGUAL d_tipo BI_PUNTO_COMA lista_d_tipo
   22             | %empty

   23 d_tipo: BI_TUPLA lista_campos BI_FTUPLA
   24       | BI_TABLA BI_CORCHETE_AP expresion_t BI_SUBRANGO expresion_t BI_CORCHETE_CI BI_DE d_tipo
   25       | BI_ID
   26       | expresion_t BI_SUBRANGO expresion_t
   27       | BI_REF d_tipo
   28       | tipo_base

   29 expresion_t: expresion
   30            | BI_LITERAL_CARACTER

   31 lista_campos: BI_ID BI_DOSPUNTOS d_tipo BI_PUNTO_COMA lista_campos
   32             | %empty

   33 tipo_base: BI_ENTERO
   34          | BI_BOOLEANO
   35          | BI_CARACTER
   36          | BI_REAL
   37          | BI_CADENA

   38 lista_de_cte: BI_ID BI_IGUAL literal BI_PUNTO_COMA lista_de_cte
   39             | %empty

   40 literal: BI_LITERAL_ENTERO
   41        | BI_LITERAL_REAL
   42        | BI_LITERAL_BOOLEANO
   43        | BI_LITERAL_CARACTER
   44        | BI_LITERAL_CADENA

   45 lista_d_var: lista_id BI_DOSPUNTOS BI_ID BI_PUNTO_COMA lista_d_var
   46            | lista_id BI_DOSPUNTOS d_tipo BI_PUNTO_COMA lista_d_var
   47            | %empty

   48 lista_id: BI_ID BI_COMA lista_id
   49         | BI_ID

   50 decl_ent_sal: decl_ent
   51             | decl_ent decl_sal
   52             | decl_sal

   53 decl_ent: BI_ENT lista_d_var

   54 decl_sal: BI_SAL lista_d_var

   55 expresion: exp_a_b
   56          | funcion_ll

   57 exp_a_b: exp_a_b BI_SUMA exp_a_b
   58        | exp_a_b BI_RESTA exp_a_b
   59        | exp_a_b BI_MULT exp_a_b
   60        | exp_a_b BI_DIVISION exp_a_b
   61        | exp_a_b BI_MOD exp_a_b
   62        | exp_a_b BI_DIV exp_a_b
   63        | BI_PARENTESIS_AP exp_a_b BI_PARENTESIS_CI
   64        | operando
   65        | literal_numerico
   66        | BI_RESTA exp_a_b
   67        | exp_a_b BI_Y exp_a_b
   68        | exp_a_b BI_O exp_a_b
   69        | BI_NO exp_a_b
   70        | BI_LITERAL_BOOLEANO
   71        | expresion BI_IGUAL expresion
   72        | expresion oprel expresion

   73 literal_numerico: BI_LITERAL_ENTERO
   74                 | BI_LITERAL_REAL

   75 oprel: BI_MAYOR
   76      | BI_MENOR
   77      | BI_MAYOR_IGUAL
   78      | BI_MENOR_IGUAL
   79      | BI_DISTINTO

   80 operando: BI_ID
   81         | operando BI_PUNTO operando
   82         | operando BI_CORCHETE_AP expresion BI_CORCHETE_CI
   83         | operando BI_REF

   84 instrucciones: instruccion BI_PUNTO_COMA instrucciones
   85              | instruccion

   86 instruccion: BI_CONTINUAR
   87            | asignacion
   88            | alternativa
   89            | iteracion
   90            | accion_ll

   91 asignacion: operando BI_ASIGNACION expresion

   92 alternativa: BI_SI expresion BI_ENTONCES instrucciones lista_opciones BI_FSI

   93 lista_opciones: BI_CORCHETE_AP BI_CORCHETE_CI expresion BI_ENTONCES instrucciones lista_opciones
   94               | %empty

   95 iteracion: it_cota_fija
   96          | it_cota_exp

   97 it_cota_exp: BI_MIENTRAS expresion BI_HACER instrucciones BI_FMIENTRAS

   98 it_cota_fija: BI_PARA BI_ID BI_ASIGNACION expresion BI_HASTA expresion BI_HACER instrucciones BI_FPARA

   99 accion_d: BI_ACCION a_cabecera bloque BI_FACCION

  100 funcion_d: BI_FUNCION f_cabecera bloque BI_DEV expresion BI_FFUNCION

  101 a_cabecera: BI_ID BI_PARENTESIS_AP d_par_form BI_PARENTESIS_CI BI_PUNTO_COMA

  102 f_cabecera: BI_ID BI_PARENTESIS_AP lista_d_var BI_PARENTESIS_CI BI_DEV d_tipo BI_PUNTO_COMA

  103 d_par_form: d_p_form BI_PUNTO_COMA d_par_form
  104           | %empty

  105 d_p_form: BI_ENT lista_id BI_DOSPUNTOS d_tipo
  106         | BI_SAL lista_id BI_DOSPUNTOS d_tipo
  107         | BI_ES lista_id BI_DOSPUNTOS d_tipo

  108 accion_ll: BI_ID BI_PARENTESIS_AP l_ll BI_PARENTESIS_CI

  109 funcion_ll: BI_ID BI_PARENTESIS_AP l_ll BI_PARENTESIS_CI

  110 l_ll: expresion BI_COMA l_ll
  111     | expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
BI_IGUAL (258) 21 38 71
BI_MAYOR (259) 75
BI_MENOR (260) 76
BI_MAYOR_IGUAL (261) 77
BI_MENOR_IGUAL (262) 78
BI_DISTINTO (263) 79
BI_ASIGNACION (264) 91 98
BI_COMA (265) 48 110
BI_PUNTO (266) 81
BI_PUNTO_COMA (267) 21 31 38 45 46 84 101 102 103
BI_SUBRANGO (268) 24 26
BI_DOSPUNTOS (269) 31 45 46 105 106 107
BI_CORCHETE_AP (270) 24 82 93
BI_CORCHETE_CI (271) 24 82 93
BI_PARENTESIS_AP (272) 63 101 102 108 109
BI_PARENTESIS_CI (273) 63 101 102 108 109
BI_SUMA (274) 57
BI_RESTA (275) 58 66
BI_MULT (276) 59
BI_DIVISION (277) 60
BI_MOD (278) 61
BI_DIV (279) 62
BI_Y (280) 67
BI_O (281) 68
BI_MENOS_UNARIO (282)
BI_ALGORITMO (283) 4
BI_FALGORITMO (284) 4
BI_ACCION (285) 99
BI_FACCION (286) 99
BI_FUNCION (287) 100
BI_FFUNCION (288) 100
BI_TIPO (289) 18
BI_FTIPO (290) 18
BI_CONST (291) 19
BI_FCONST (292) 19
BI_VAR (293) 20
BI_FVAR (294) 20
BI_TUPLA (295) 23
BI_FTUPLA (296) 23
BI_MIENTRAS (297) 97
BI_FMIENTRAS (298) 97
BI_HACER (299) 97 98
BI_PARA (300) 98
BI_FPARA (301) 98
BI_HASTA (302) 98
BI_TABLA (303) 24
BI_CONTINUAR (304) 86
BI_DE (305) 24
BI_REF (306) 27 83
BI_ENT (307) 53 105
BI_SAL (308) 54 106
BI_ES (309) 107
BI_DEV (310) 100 102
BI_NO (311) 69
BI_SI (312) 92
BI_FSI (313) 92
BI_ENTONCES (314) 92 93
BI_ENTERO (315) 33
BI_BOOLEANO (316) 34
BI_CARACTER (317) 35
BI_REAL (318) 36
BI_CADENA (319) 37
BI_COMENTARIO (320) 5 6
BI_LITERAL_BOOLEANO (321) 42 70
BI_LITERAL_CARACTER (322) 30 43
BI_LITERAL_CADENA (323) 44
BI_ID (324) 4 21 25 31 38 45 48 49 80 98 101 102 108 109
BI_LITERAL_ENTERO (325) 40 73
BI_LITERAL_REAL (326) 41 74


No terminales con las reglas donde aparecen

$accept (72)
    en la izquierda: 0
algoritmo (73)
    en la izquierda: 4, en la derecha: 0
$@1 (74)
    en la izquierda: 1, en la derecha: 4
$@2 (75)
    en la izquierda: 2, en la derecha: 4
$@3 (76)
    en la izquierda: 3, en la derecha: 4
cabecera_alg (77)
    en la izquierda: 5, en la derecha: 4
bloque_alg (78)
    en la izquierda: 6, en la derecha: 4
decl_globales (79)
    en la izquierda: 7 8 9, en la derecha: 5 7 8
decl_a_f (80)
    en la izquierda: 10 11 12, en la derecha: 5 10 11
bloque (81)
    en la izquierda: 13, en la derecha: 6 99 100
declaraciones (82)
    en la izquierda: 14 15 16 17, en la derecha: 13 14 15 16
declaracion_tipo (83)
    en la izquierda: 18, en la derecha: 7 14
declaracion_cte (84)
    en la izquierda: 19, en la derecha: 8 15
declaracion_var (85)
    en la izquierda: 20, en la derecha: 16
lista_d_tipo (86)
    en la izquierda: 21 22, en la derecha: 18 21
d_tipo (87)
    en la izquierda: 23 24 25 26 27 28, en la derecha: 21 24 27 31
    46 102 105 106 107
expresion_t (88)
    en la izquierda: 29 30, en la derecha: 24 26
lista_campos (89)
    en la izquierda: 31 32, en la derecha: 23 31
tipo_base (90)
    en la izquierda: 33 34 35 36 37, en la derecha: 28
lista_de_cte (91)
    en la izquierda: 38 39, en la derecha: 19 38
literal (92)
    en la izquierda: 40 41 42 43 44, en la derecha: 38
lista_d_var (93)
    en la izquierda: 45 46 47, en la derecha: 20 45 46 53 54 102
lista_id (94)
    en la izquierda: 48 49, en la derecha: 45 46 48 105 106 107
decl_ent_sal (95)
    en la izquierda: 50 51 52, en la derecha: 5
decl_ent (96)
    en la izquierda: 53, en la derecha: 50 51
decl_sal (97)
    en la izquierda: 54, en la derecha: 51 52
expresion (98)
    en la izquierda: 55 56, en la derecha: 29 71 72 82 91 92 93 97
    98 100 110 111
exp_a_b (99)
    en la izquierda: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72,
    en la derecha: 55 57 58 59 60 61 62 63 66 67 68 69
literal_numerico (100)
    en la izquierda: 73 74, en la derecha: 65
oprel (101)
    en la izquierda: 75 76 77 78 79, en la derecha: 72
operando (102)
    en la izquierda: 80 81 82 83, en la derecha: 64 81 82 83 91
instrucciones (103)
    en la izquierda: 84 85, en la derecha: 13 84 92 93 97 98
instruccion (104)
    en la izquierda: 86 87 88 89 90, en la derecha: 84 85
asignacion (105)
    en la izquierda: 91, en la derecha: 87
alternativa (106)
    en la izquierda: 92, en la derecha: 88
lista_opciones (107)
    en la izquierda: 93 94, en la derecha: 92 93
iteracion (108)
    en la izquierda: 95 96, en la derecha: 89
it_cota_exp (109)
    en la izquierda: 97, en la derecha: 96
it_cota_fija (110)
    en la izquierda: 98, en la derecha: 95
accion_d (111)
    en la izquierda: 99, en la derecha: 10
funcion_d (112)
    en la izquierda: 100, en la derecha: 11
a_cabecera (113)
    en la izquierda: 101, en la derecha: 99
f_cabecera (114)
    en la izquierda: 102, en la derecha: 100
d_par_form (115)
    en la izquierda: 103 104, en la derecha: 101 103
d_p_form (116)
    en la izquierda: 105 106 107, en la derecha: 103
accion_ll (117)
    en la izquierda: 108, en la derecha: 90
funcion_ll (118)
    en la izquierda: 109, en la derecha: 56
l_ll (119)
    en la izquierda: 110 111, en la derecha: 108 109 110


Estado 0

    0 $accept: . algoritmo $end

    BI_ALGORITMO  desplazar e ir al estado 1

    algoritmo  ir al estado 2


Estado 1

    4 algoritmo: BI_ALGORITMO . BI_ID $@1 cabecera_alg $@2 bloque_alg $@3 BI_FALGORITMO

    BI_ID  desplazar e ir al estado 3


Estado 2

    0 $accept: algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    4 algoritmo: BI_ALGORITMO BI_ID . $@1 cabecera_alg $@2 bloque_alg $@3 BI_FALGORITMO

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 5


Estado 4

    0 $accept: algoritmo $end .

    $default  aceptar


Estado 5

    4 algoritmo: BI_ALGORITMO BI_ID $@1 . cabecera_alg $@2 bloque_alg $@3 BI_FALGORITMO

    BI_TIPO   desplazar e ir al estado 6
    BI_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 9 (decl_globales)

    cabecera_alg      ir al estado 8
    decl_globales     ir al estado 9
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 6

   18 declaracion_tipo: BI_TIPO . lista_d_tipo BI_FTIPO

    BI_ID  desplazar e ir al estado 12

    $default  reduce usando la regla 22 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   19 declaracion_cte: BI_CONST . lista_de_cte BI_FCONST

    BI_ID  desplazar e ir al estado 14

    $default  reduce usando la regla 39 (lista_de_cte)

    lista_de_cte  ir al estado 15


Estado 8

    4 algoritmo: BI_ALGORITMO BI_ID $@1 cabecera_alg . $@2 bloque_alg $@3 BI_FALGORITMO

    $default  reduce usando la regla 2 ($@2)

    $@2  ir al estado 16


Estado 9

    5 cabecera_alg: decl_globales . decl_a_f decl_ent_sal BI_COMENTARIO

    BI_ACCION   desplazar e ir al estado 17
    BI_FUNCION  desplazar e ir al estado 18

    $default  reduce usando la regla 12 (decl_a_f)

    decl_a_f   ir al estado 19
    accion_d   ir al estado 20
    funcion_d  ir al estado 21


Estado 10

    7 decl_globales: declaracion_tipo . decl_globales

    BI_TIPO   desplazar e ir al estado 6
    BI_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 9 (decl_globales)

    decl_globales     ir al estado 22
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 11

    8 decl_globales: declaracion_cte . decl_globales

    BI_TIPO   desplazar e ir al estado 6
    BI_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 9 (decl_globales)

    decl_globales     ir al estado 23
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 12

   21 lista_d_tipo: BI_ID . BI_IGUAL d_tipo BI_PUNTO_COMA lista_d_tipo

    BI_IGUAL  desplazar e ir al estado 24


Estado 13

   18 declaracion_tipo: BI_TIPO lista_d_tipo . BI_FTIPO

    BI_FTIPO  desplazar e ir al estado 25


Estado 14

   38 lista_de_cte: BI_ID . BI_IGUAL literal BI_PUNTO_COMA lista_de_cte

    BI_IGUAL  desplazar e ir al estado 26


Estado 15

   19 declaracion_cte: BI_CONST lista_de_cte . BI_FCONST

    BI_FCONST  desplazar e ir al estado 27


Estado 16

    4 algoritmo: BI_ALGORITMO BI_ID $@1 cabecera_alg $@2 . bloque_alg $@3 BI_FALGORITMO

    BI_TIPO   desplazar e ir al estado 6
    BI_CONST  desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 28

    $default  reduce usando la regla 17 (declaraciones)

    bloque_alg        ir al estado 29
    bloque            ir al estado 30
    declaraciones     ir al estado 31
    declaracion_tipo  ir al estado 32
    declaracion_cte   ir al estado 33
    declaracion_var   ir al estado 34


Estado 17

   99 accion_d: BI_ACCION . a_cabecera bloque BI_FACCION

    BI_ID  desplazar e ir al estado 35

    a_cabecera  ir al estado 36


Estado 18

  100 funcion_d: BI_FUNCION . f_cabecera bloque BI_DEV expresion BI_FFUNCION

    BI_ID  desplazar e ir al estado 37

    f_cabecera  ir al estado 38


Estado 19

    5 cabecera_alg: decl_globales decl_a_f . decl_ent_sal BI_COMENTARIO

    BI_ENT  desplazar e ir al estado 39
    BI_SAL  desplazar e ir al estado 40

    decl_ent_sal  ir al estado 41
    decl_ent      ir al estado 42
    decl_sal      ir al estado 43


Estado 20

   10 decl_a_f: accion_d . decl_a_f

    BI_ACCION   desplazar e ir al estado 17
    BI_FUNCION  desplazar e ir al estado 18

    $default  reduce usando la regla 12 (decl_a_f)

    decl_a_f   ir al estado 44
    accion_d   ir al estado 20
    funcion_d  ir al estado 21


Estado 21

   11 decl_a_f: funcion_d . decl_a_f

    BI_ACCION   desplazar e ir al estado 17
    BI_FUNCION  desplazar e ir al estado 18

    $default  reduce usando la regla 12 (decl_a_f)

    decl_a_f   ir al estado 45
    accion_d   ir al estado 20
    funcion_d  ir al estado 21


Estado 22

    7 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 7 (decl_globales)


Estado 23

    8 decl_globales: declaracion_cte decl_globales .

    $default  reduce usando la regla 8 (decl_globales)


Estado 24

   21 lista_d_tipo: BI_ID BI_IGUAL . d_tipo BI_PUNTO_COMA lista_d_tipo

    BI_PARENTESIS_AP     desplazar e ir al estado 46
    BI_RESTA             desplazar e ir al estado 47
    BI_TUPLA             desplazar e ir al estado 48
    BI_TABLA             desplazar e ir al estado 49
    BI_REF               desplazar e ir al estado 50
    BI_NO                desplazar e ir al estado 51
    BI_ENTERO            desplazar e ir al estado 52
    BI_BOOLEANO          desplazar e ir al estado 53
    BI_CARACTER          desplazar e ir al estado 54
    BI_REAL              desplazar e ir al estado 55
    BI_CADENA            desplazar e ir al estado 56
    BI_LITERAL_BOOLEANO  desplazar e ir al estado 57
    BI_LITERAL_CARACTER  desplazar e ir al estado 58
    BI_ID                desplazar e ir al estado 59
    BI_LITERAL_ENTERO    desplazar e ir al estado 60
    BI_LITERAL_REAL      desplazar e ir al estado 61

    d_tipo            ir al estado 62
    expresion_t       ir al estado 63
    tipo_base         ir al estado 64
    expresion         ir al estado 65
    exp_a_b           ir al estado 66
    literal_numerico  ir al estado 67
    operando          ir al estado 68
    funcion_ll        ir al estado 69


Estado 25

   18 declaracion_tipo: BI_TIPO lista_d_tipo BI_FTIPO .

    $default  reduce usando la regla 18 (declaracion_tipo)


Estado 26

   38 lista_de_cte: BI_ID BI_IGUAL . literal BI_PUNTO_COMA lista_de_cte

    BI_LITERAL_BOOLEANO  desplazar e ir al estado 70
    BI_LITERAL_CARACTER  desplazar e ir al estado 71
    BI_LITERAL_CADENA    desplazar e ir al estado 72
    BI_LITERAL_ENTERO    desplazar e ir al estado 73
    BI_LITERAL_REAL      desplazar e ir al estado 74

    literal  ir al estado 75


Estado 27

   19 declaracion_cte: BI_CONST lista_de_cte BI_FCONST .

    $default  reduce usando la regla 19 (declaracion_cte)


Estado 28

   20 declaracion_var: BI_VAR . lista_d_var BI_FVAR

    BI_ID  desplazar e ir al estado 76

    $default  reduce usando la regla 47 (lista_d_var)

    lista_d_var  ir al estado 77
    lista_id     ir al estado 78

